ingressdev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingressdev
  labels:
    app: wordpress
    type: frontend
spec:
  rules:
    - host: dev.touristmap.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
