wordpressingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/affinity: "true"
spec:
  rules:
    - host: www.veinttidos.org
      http:
        paths:
        - path: "/"
          pathType: Prefix	
          backend:
             service:
                name: wordpress-service
                port:
                  number: 80
